--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,7 +126,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(70, 71, 71, 0.5);
+  background: transparent
 }
 
 ::-webkit-scrollbar-thumb:hover {
